--- a/views/contactos.hbs
+++ b/views/contactos.hbs
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168816381-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-168816381-1');
+    </script>
+    
     <meta charset="UTF-8">
     <title>Contacto - Coronavirus</title>
+
     <link rel="shortcut icon" href="/imagenes/1.png" />
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="/fontawesome/css/all.css">
