--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168816381-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-168816381-1');
+    </script>
     <meta charset="UTF-8">
     <title>Información - Coronavirus</title>
     <link rel="shortcut icon" href="/imagenes/1.png" />
