--- a/views/estadisticas.hbs
+++ b/views/estadisticas.hbs
@@ -11,6 +11,8 @@
         gtag('config', 'UA-168816381-1');
     </script>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Estadísticas - Coronavirus</title>
     <link rel="shortcut icon" href="/imagenes/1.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
