--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,6 +11,8 @@
         gtag('config', 'UA-168816381-1');
     </script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Información - Coronavirus</title>
     <link rel="shortcut icon" href="/imagenes/1.png" />
     <link rel="stylesheet" href="/css/estilos.css">
@@ -221,4 +223,5 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-   {{> footer }}
+    <script src="/js/informacion.js"></script>
+{{> footer }}
