--- a/views/contactos.hbs
+++ b/views/contactos.hbs
@@ -12,6 +12,8 @@
     </script>
     
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Contacto - Coronavirus</title>
 
     <link rel="shortcut icon" href="/imagenes/1.png" />
