--- a/views/parciales/header.hbs
+++ b/views/parciales/header.hbs
@@ -1,25 +1,28 @@
-<header class="animate__animated animate__fadeIn animate__faster">
-    <a href="/">
-        <img src="/imagenes/logo.png">
-    </a>
-
-    <nav>
-        <ul>
-            <li>
-                <a href="/">
-                    <h5>Información</h5>
-                </a>
-            </li>
-            <li>
-                <a href="/estadisticas">
-                    <h5>Estadísticas</h5>
-                </a>
-            </li>
-            <li>
-                <a href="/contactos">
-                    <h5>Contacto</h5>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="/"><img src="imagenes/logo2.png" style="width: 100%;"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/">
+                            <h5>Información</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/estadisticas">
+                            <h5>Estadísticas</h5>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/contactos">
+                            <h5>Contacto</h5>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+</nav>
+<br><br>
