--- a/views/estadisticas.hbs
+++ b/views/estadisticas.hbs
@@ -1,5 +1,6 @@
 {{> head }}
     <title>Estadísticas - Coronavirus</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 
     <!-- amCharts includes -->
 
@@ -36,6 +37,7 @@
 </head>
 
 <body class="animate__animated animate__fadeIn animate__faster">
+    <div class="contenedor">
         {{> header }}
         <div class="flexbox">
             <div id="chartdiv"></div>
