--- a/views/contactos.hbs
+++ b/views/contactos.hbs
@@ -1,17 +1,18 @@
 {{> head }}
+
     <title>Contacto - Coronavirus</title>
 
     <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="/fontawesome/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;500&display=swap" rel="stylesheet">
-
 </head>
 
 <body class="animate__animated animate__fadeIn animate__faster">
+    <div class="contenedor">
         {{> header }}
-        <div class="con">
-            <hr><i class="fas fa-info-circle"></i> El Ministerio de Salud de la Nación y las provincias habilitaron líneas teléfonicas para hacer consultas específicas sobre el coronavirus. El protocolo actual indica que es recomendable llamar por teléfono y no acudir a las guardias para
+        <div class="main">
+            <hr> <br> <i class="fas fa-info-circle"></i> El Ministerio de Salud de la Nación y las provincias habilitaron líneas teléfonicas para hacer consultas específicas sobre el coronavirus. El protocolo actual indica que es recomendable llamar por teléfono y no acudir a las guardias para
             evitar la propagación del virus. <br><br>
             <hr>
             <h1>
@@ -56,4 +57,5 @@
         </div>
         <footer>
         </footer>
+    </div>
 {{> footer }}
