--- a/views/contactos.hbs
+++ b/views/contactos.hbs
@@ -11,46 +11,59 @@
 <body class="animate__animated animate__fadeIn animate__faster">
     <div class="contenedor">
         {{> header }}
+        <br>
         <div class="main">
-            <hr> <br> <i class="fas fa-info-circle"></i> El Ministerio de Salud de la Nación y las provincias habilitaron líneas teléfonicas para hacer consultas específicas sobre el coronavirus. El protocolo actual indica que es recomendable llamar por teléfono y no acudir a las guardias para
-            evitar la propagación del virus. <br><br>
+            <div class="anuncio">  
+                <hr> <br> <i class="fas fa-info-circle"></i> El Ministerio de Salud de la Nación y las provincias habilitaron líneas teléfonicas para hacer consultas específicas sobre el coronavirus. El protocolo actual indica que es recomendable llamar por teléfono y no acudir a las guardias para
+                evitar la propagación del virus. <br><br><hr>      
+            </div>
+            <br>
             <hr>
             <h1>
                 Los teléfonos para hacer consultas por el coronavirus son:
             </h1>
-            <br> <i class="fas fa-phone-square-alt"></i> Desde todo el país: <strong> 0800-222-1002 (opción 1) </strong><br>
-            <img src="/imagenes/contactosCovid.png" align="right">
-            <br> <i class="fas fa-phone-square-alt"></i> Provincia de Buenos Aires: <strong>148 </strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> Ciudad de Buenos Aires: <strong>107 / 11 5050 0147 (WhatsApp)</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Catamarca: <strong>383 154238872</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Chaco: <strong>0800 444 0829</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> Chubut: <strong>0800 222 2676</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> Córdoba: <strong>0800 122 1444</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> Corrientes: <strong>0379 4974811 (fijo)/ 379 4895124 (celular)</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> Entre Ríos: <strong>107</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Formosa: <strong>107</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> Jujuy: <strong>0800 888 4767</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> La Pampa: <strong>0800 333 1135 / 2954 604986 (celular) / 2954 619130 (celular) / 2302 531304 (celular)</strong> <br>
-            <br> <i class="fas fa-phone-square-alt"></i> La Rioja: <strong> 107 / 911</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Mendoza: <strong>0800 800 26843</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Misiones: <strong> 0800 444 3400</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Neuquén: <strong> 0800 333 1002</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Río Negro: <strong> 911</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Salta: <strong> 911</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> San Luis: <strong> 107</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> San Juan: <strong> 1073</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Santa Cruz: <strong> 107</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Santa Fe: <strong>0800 555 6549</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Santiago del Estero: <strong>107 / 385 4213006 / 385 5237077</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Tierra del Fuego, Antártida e Islas del Atlántico Sur: <strong>  107</strong><br>
-            <br> <i class="fas fa-phone-square-alt"></i> Tucumán: <strong>  0800 555 8478 / 0381 4302228</strong> (lunes a viernes 7 a 17 horas)<br>
+            <br> <i class="fas fa-phone-square-alt"></i> Desde todo el país <strong> (opción 1)</strong>: <strong class="copy"> 0800-222-1002 </strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Provincia de Buenos Aires: <strong class="copy"> 148 </strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Ciudad de Buenos Aires: <strong class="copy">107</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Ciudad de Buenos Aires<strong> (WhatsApp)</strong>: <strong class="copy"> 11 5050 0147 </strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Catamarca: <strong class="copy">383 154238872</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Chaco: <strong class="copy">0800 444 0829</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Chubut: <strong class="copy">0800 222 2676</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Córdoba: <strong class="copy">0800 122 1444</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Corrientes <strong>(fijo)</strong>: <strong class="copy">0379 4974811</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Corrientes <strong>(celular)</strong>: <strong class="copy">379 4895124</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Entre Ríos: <strong class="copy">107</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Formosa: <strong class="copy">107</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Jujuy: <strong class="copy">0800 888 4767</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> La Pampa: <strong class="copy">0800 333 1135</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> La Pampa <strong>(celular)</strong>: <strong class="copy">2954 604986</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> La Pampa <strong>(celular)</strong>: <strong class="copy">2954 619130</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> La Pampa <strong>(celular)</strong>: <strong class="copy">2302 531304</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> La Rioja: <strong class="copy"> 107 </strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> La Rioja: <strong class="copy"> 911</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Mendoza: <strong class="copy">0800 800 26843</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Misiones: <strong class="copy"> 0800 444 3400</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Neuquén: <strong class="copy"> 0800 333 1002</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Río Negro: <strong class="copy"> 911</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Salta: <strong class="copy"> 911</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> San Luis: <strong class="copy"> 107</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> San Juan: <strong class="copy"> 1073</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Santa Cruz: <strong class="copy"> 107</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Santa Fe: <strong class="copy">0800 555 6549</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Santiago del Estero: <strong class="copy">107 </strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Santiago del Estero: <strong class="copy">385 4213006</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Santiago del Estero: <strong class="copy">385 5237077</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Tierra del Fuego, Antártida e Islas del Atlántico Sur: <strong class="copy">107</strong><br>
+            <br> <i class="fas fa-phone-square-alt"></i> Tucumán: <strong class="copy">0800 555 8478</strong> <br>
+            <br> <i class="fas fa-phone-square-alt"></i> Tucumán <strong>(lunes a viernes 7 a 17 horas)</strong>: <strong class="copy">0381 4302228</strong> <br>
             <br>
             <hr>
             <br>
             <ul>
                 <li> <strong> <i class="fas fa-users"></i> Teléfono para para denunciar violaciones a la cuarentena: </strong>134 <br><br>
-                <li> <strong> Asistencia para los argentinos en el exterior: </strong>+5491162717291 / +5491144113057<br><br>
-                <li> <strong> <i class="fas fa-assistive-listening-systems"></i> Videollamadas para personas sordas e hipoacúsicas:</strong> 11 5728 4011 (lunes a viernes de 10 a 15) <br><br>
+                <li> <strong> Asistencia para los argentinos en el exterior: </strong>+5491162717291<br><br>
+                <li> <strong> Asistencia para los argentinos en el exterior: </strong>+5491144113057<br><br>
+                <li> <strong> <i class="fas fa-assistive-listening-systems"></i> Videollamadas para personas sordas e hipoacúsicas <strong>(lunes a viernes de 10 a 15)</strong>:</strong> 11 5728 4011<br><br>
             </ul>
             <hr>
             <br><br><br><br><br>
@@ -58,4 +71,5 @@
         <footer>
         </footer>
     </div>
+    <script src="/js/contactos.js"></script>
 {{> footer }}
