--- a/views/contactos.hbs
+++ b/views/contactos.hbs
@@ -60,10 +60,10 @@
             <hr>
             <br>
             <ul>
-                <li> <strong> <i class="fas fa-users"></i> Teléfono para para denunciar violaciones a la cuarentena: </strong>134 <br><br>
-                <li> <strong> Asistencia para los argentinos en el exterior: </strong>+5491162717291<br><br>
-                <li> <strong> Asistencia para los argentinos en el exterior: </strong>+5491144113057<br><br>
-                <li> <strong> <i class="fas fa-assistive-listening-systems"></i> Videollamadas para personas sordas e hipoacúsicas <strong>(lunes a viernes de 10 a 15)</strong>:</strong> 11 5728 4011<br><br>
+                <li> <strong> <i class="fas fa-users"></i> Teléfono para para denunciar violaciones a la cuarentena: </strong><strong class="copy">134</strong><br><br>
+                <li> <strong> Asistencia para los argentinos en el exterior: </strong><strong class="copy">+5491162717291</strong><br><br>
+                <li> <strong> Asistencia para los argentinos en el exterior: </strong><strong class="copy">+5491144113057</strong><br><br>
+                <li> <strong> <i class="fas fa-assistive-listening-systems"></i> Videollamadas para personas sordas e hipoacúsicas <strong>(lunes a viernes de 10 a 15)</strong>: </strong> <strong class="copy">11 5728 4011</strong><br><br>
             </ul>
             <hr>
             <br><br><br><br><br>
