--- a/views/parciales/footer.hbs
+++ b/views/parciales/footer.hbs
@@ -1,3 +1,4 @@
+    <script src="/js/nav.js"></script>
     <script>
         document.querySelector('footer').append(`Sierra Nahuel, Silvero Iván, Sosa Leal Pío - ${ new Date().getFullYear() }`);
     </script>
