--- a/views/parciales/header.hbs
+++ b/views/parciales/header.hbs
@@ -1,24 +1,17 @@
-<header class="animate__animated animate__fadeIn animate__faster">
-    <a href="/">
-        <img src="/imagenes/logo.png">
-    </a>
-    <nav>
-        <ul>
-            <li>
-                <a href="/">
-                    <h5>Información</h5>
-                </a>
-            </li>
-            <li>
-                <a href="/estadisticas">
-                    <h5>Estadísticas</h5>
-                </a>
-            </li>
-            <li>
-                <a href="/contactos">
-                    <h5>Contacto</h5>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<nav>
+    <div class="logo">
+        <a href="/">
+            <img src="/imagenes/logo.png" alt="">
+        </a>
+    </div>
+    <ul class="nav-links">
+        <li><a href="/"> Información </a></li>
+        <li><a href="/estadisticas"> Estadísticas </a></li>
+        <li><a href="/contactos"> Contactos </a></li>
+    </ul>
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+</nav>
