--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,12 +1,120 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
     font-family: 'Helvetica', sans-serif;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: -moz-none;
     -o-user-select: none;
     user-select: none;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    background-color: white;
+    align-items: center;
+    min-height: 15vh;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+}
+
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    color: black;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+@media screen and (max-width:1200px) {
+    .nav-links {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width:800px) {
+    body {
+        overflow-x: hidden;
+    }
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 15vh;
+        background-color: white;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+        z-index: 999;
+    }
+    .nav-links li {
+        opacity: 0;
+    }
+    .burger {
+        display: block;
+    }
+    .img .titular {
+        left: 90%;
+        transform: translate(82%, 50%);
+    }
+    #fire {
+        left: 90%;
+        transform: translate(150%, 50%);
+    }
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
 }
 
 p {
@@ -42,66 +150,6 @@ p {
 
 .contenedor {
     position: relative;
-}
-
-header {
-    width: auto;
-    height: 6em;
-    padding-left: 5em;
-    padding-right: 5em;
-    background-color: white;
-}
-
-header img {
-    width: 20%;
-    margin: 1em;
-    position: relative;
-    top: 50%;
-    transform: translateY(-90%);
-    float: left;
-}
-
-header nav {
-    width: 20em;
-    height: 3em;
-    position: relative;
-    top: 50%;
-    right: 2em;
-    transform: translateY(-50%);
-    float: right;
-    background-color: white;
-}
-
-header nav ul {
-    list-style: none;
-    background-color: white;
-}
-
-header nav ul li {
-    padding: 1em;
-    display: inline-block;
-    background-color: white;
-}
-
-header nav ul li a {
-    text-decoration: none;
-    background-color: white;
-}
-
-header nav ul li a h5 {
-    color: black;
-    background-color: white;
-}
-
-header nav ul li a h5:hover {
-    padding-bottom: 0.5em;
-    transition: 0.3s;
-    border-bottom: 3px solid rgb(216, 11, 11);
-}
-
-header nav ul li a .border {
-    padding-bottom: 0.5em;
-    border-bottom: 3px solid rgb(216, 11, 11);
 }
 
 .img {
