--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -64,6 +64,7 @@ nav {
         right: 0px;
         height: 100%;
         top: 10vh;
+        background-color: white;
         color: white;
         display: flex;
         flex-direction: column;
