--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -61,6 +61,7 @@ nav {
     }
     .nav-links {
         display: none;
+        opacity: 0;
         position: absolute;
         right: 0px;
         height: 100%;
