--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -15,7 +15,7 @@ nav {
     justify-content: space-around;
     background-color: white;
     align-items: center;
-    min-height: 15vh;
+    min-height: 8vh;
 }
 
 .nav-links {
@@ -33,7 +33,13 @@ nav {
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 15px;
+}
+
+.nav-links a:hover {
+    padding-bottom: 0.5em;
+    transition: 0.3s;
+    border-bottom: 3px solid rgb(216, 11, 11);
 }
 
 .burger {
@@ -42,8 +48,8 @@ nav {
 }
 
 .burger div {
-    width: 50px;
-    height: 6px;
+    width: 25px;
+    height: 3px;
     background-color: black;
     margin: 5px;
     transition: all 0.3s ease;
@@ -56,22 +62,19 @@ nav {
 }
 
 @media screen and (max-width:1080px) {
-    html,
     body {
         overflow-x: hidden;
     }
     .nav-links {
-        display: none;
         position: absolute;
         right: 0px;
-        height: 100%;
-        top: 10vh;
+        height: 92vh;
+        top: 11vh;
         background-color: white;
-        color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 50%;
+        width: 30%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         z-index: 999;
