--- a/views/parciales/head.hbs
+++ b/views/parciales/head.hbs
@@ -10,7 +10,7 @@
         gtag('config', 'UA-168816381-1');
     </script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> --}}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="/imagenes/1.png" />
 
