--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -326,7 +326,9 @@
     }
     
     .anuncio {
-        color: black;
+        color: white;
+        background-color: rgb(47, 79, 79);
+        padding: 1em;
     }
     
     .nav-links {
