--- a/views/parciales/head.hbs
+++ b/views/parciales/head.hbs
@@ -12,5 +12,8 @@
     <meta charset="UTF-8">
     {{!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> --}}
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <meta http-equiv="pragma" content="no-cache">
     <link rel="shortcut icon" href="/imagenes/1.png" />
 
