--- a/views/parciales/header.hbs
+++ b/views/parciales/header.hbs
@@ -8,6 +8,7 @@
         <li><a href="/"> Información </a></li>
         <li><a href="/estadisticas"> Estadísticas </a></li>
         <li><a href="/contactos"> Contactos </a></li>
+        <li><a href="/encuesta"> Encuesta </a></li>
     </ul>
     <div class="burger">
         <div class="line1"></div>
